# Vantage

./: .gitignore  Makefile  README.md  install  install.sh  meson.build  vantage.sh  vantage_client.py  vantage_common.py  vantage_helper.py  vantage_tray.py  vantage_window.py
.github/packaging/: PKGBUILD
data/: meson.build  org.vantage.Vantage.gschema.xml  org.vantage.Vantage.metainfo.xml.in  org.vantage.helper.policy.in  vantage.desktop.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: meson.build  vantage-helper.in  vantage.in
src/vantage/: __init__.py  client.py  gpu.py  helper.py  main.py  tray.py  window.py
