icondir = get_option('datadir') / 'icons' / 'hicolor'

# Full-colour application icon.
install_data(
  'hicolor' / '256x256' / 'apps' / 'org.vantage.Vantage.png',
  install_dir: icondir / '256x256' / 'apps',
)

# Monochrome symbolic icon (panels, GNOME Shell search, etc.).
install_data(
  'hicolor' / 'symbolic' / 'apps' / 'org.vantage.Vantage-symbolic.svg',
  install_dir: icondir / 'symbolic' / 'apps',
)
